# solana-move-around

./: .gitignore  Cargo.toml  package.json  settings.json
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: integration.rs  test.js
workspace/frame/: package.json
workspace/frame/src/: App.tsx  style.css
