[package]
name = "solana-move-around"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.7.4"
thiserror = "1.0.26"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9.1"
solana-client = "1.7.10"

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.7.4"
assert_matches = "1.4.0"
solana-program-test = "1.7.4"
solana-validator = "1.7.4"

[lib]
name="solana_simple_auction"
crate-type = ["cdylib", "lib"]
